2013-01-18  Michael Saboff  <msaboff@apple.com>

        Harden ArithDiv of integers fix-up by inserting Int32ToDouble node directly
        https://bugs.webkit.org/show_bug.cgi?id=107321

        Reviewed by  Filip Pizlo.

        Split out the Int32ToDouble node insertion from fixDoubleEdge() and used it directly when we're fixing up
        an ArithDiv node with integer inputs and output for platforms that don't have integer division.
        Since we are checking that our inputs should be ints, we can just insert the Int32ToDouble node
        without any further checks.

        * dfg/DFGFixupPhase.cpp:
        (JSC::DFG::FixupPhase::fixupNode):
        (JSC::DFG::FixupPhase::fixDoubleEdge):
        (FixupPhase):
        (JSC::DFG::FixupPhase::injectInt32ToDoubleNode):

2013-01-18  Michael Saboff  <msaboff@apple.com>

        Fix up of ArithDiv nodes for non-x86 CPUs is broken
        https://bugs.webkit.org/show_bug.cgi?id=107309

        Reviewed by  Filip Pizlo.

        Changed the logic so that we insert an Int32ToDouble node when the existing edge is not SpecDouble.

        * dfg/DFGFixupPhase.cpp:
        (JSC::DFG::FixupPhase::fixDoubleEdge):

2013-01-18  Dan Bernstein  <mitz@apple.com>

        Tried to fix the build after r140194.

        * API/JSWrapperMap.mm:
        (-[JSWrapperMap wrapperForObject:]):

2013-01-18  Mark Hahnenberg  <mhahnenberg@apple.com>

        Objective-C API: Update documentation for JSValue and JSContext
        https://bugs.webkit.org/show_bug.cgi?id=107313

        Reviewed by Geoffrey Garen.

        After changing the semantics of object lifetime we need to update the API documentation to reflect the new semantics.

        * API/APIJSValue.h:
        * API/JSContext.h:

2013-01-18  Balazs Kilvady  <kilvadyb@homejinni.com>

        r134080 causes heap problem on linux systems where PAGESIZE != 4096
        https://bugs.webkit.org/show_bug.cgi?id=102828

        Reviewed by Mark Hahnenberg.
